add router and control for my hikes

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,22 @@
 </head>
 <body>
   <nav>
+    <a 
+			href="/trails/new"
+			<%- title === 'Add Trail' ? 'class="active"' : '' %>
+		>
+			Add New Trail
+		</a>  
+    <a 
+      href="/hikes/show" <%- title === 'My Hikes' ? 'class="active"' : '' %>
+    >
+      My Hikes
+    </a>
+    <a 
+      href="/hikes" <%- title === 'Explore Hood Mountain' ? 'class="active"' : '' %>
+    >
+      Explore Hood Mountain
+    </a>
     <% if (user) { %>
       <a href="/auth/logout">
         <button type="submit">Logout</button>
