--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
   <% if (!user) { %>
-    <link rel="stylesheet" href="/stylesheets/siwg.css">
+    <link rel="stylesheet" href="/stylesheets/sonoma-hikes/style.css">
   <% } %>
 </head>
 <body>
