--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,30 +1,30 @@
-html {
+/* html {
   box-sizing: border-box;
 }
 
 /* The Universal Selector */
-*, /* All elements*/
-*::before, /* All ::before pseudo-elements */
-*::after {
+/* *, All elements */
+/* *::before, All ::before pseudo-elements */
+/* *::after { */
   /* All ::after pseudo-elements */
   /* height & width will now include border & padding by default but can be overridden as needed */
-  box-sizing: inherit;
-}
+  /* box-sizing: inherit;
+} */
 
 /* resets font size to be 62.5% of the user preference - in most browser configurations this will be 10px */
-:root {
-  font-size: 62.5%;
-}
+/* :root {
+  font-size: 62.5%; */
+/* } */
 
-body {
+/* body {
   background-color: gray;
   /* Use a system font, if none are available use an available sans-sarif font */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  margin: 0;
-}
+  margin: 0; */
+/* } */
 
-nav {
+/* nav {
   background-color: white;
   font-size: 1.6rem;
   display: flex;
@@ -40,4 +40,4 @@ main {
 
 h1 {
   font-size: 3.6rem;
-}
+} */
