add trail index page and nav bar connect

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,7 +19,7 @@
       My Hikes
     </a>
     <a 
-      href="/profiles" <%- title === 'Explore Hood Mountain' ? 'class="active"' : '' %>
+      href="/trails" <%- title === 'Explore Hood Mountain' ? 'class="active"' : '' %>
     >
       Explore Hood Mountain
     </a>
