--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,8 @@
 <%- include('./partials/nav') %>
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
-  <% if (user?.profile.avatar) { %>
-    <div>
-      <img
-        src="<%= user.profile.avatar %>"
-        alt="<%= user.profile.name %> avatar"
-      />
-    </div>
-  <% } %>
+  <h1>Welcome to Hood Mountain!</h1>
+  <h2>Sonoma County, CA</h2>
 </main>
 
 <%- include('./partials/footer') %>
