--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -7,7 +7,7 @@
         <label for="name-input">Trail Name:</label>
         <input type="text" name="name">
         <label for="mileage-input">Total Mileage:</label>
-        <input type="text" name="mileage">
+        <input type="text" name="totalMileage">
         <label for="exposure-input">Sun Exposure:</label>
         <input type="text" name="exposure">
         <label for="dogsAllowed-input">Are Dogs Allowed?</label>
