add delete to trail view

--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -21,7 +21,7 @@
           <td><%= trail.exposure %></td>
           <td><%= trail.dogsAllowed %></td>
           <td>
-            <form action="/trails/<%= trail._id %>?_meth=DELETE" method="POST">
+            <form action="/trails/<%= trail._id %>?_method=DELETE" method="POST">
               <button>X</button>
             </form>
           </td>
