--- a/views/trails/edit.ejs
+++ b/views/trails/edit.ejs
@@ -5,13 +5,13 @@
     <h1><%= title %></h1>
     <form action="/trails/<%= trail._id %>?_method=PUT" method="POST">
         <label for="name-input">Trail Name:</label>
-        <input type="text" name="name">
+        <input value="<%= trail.name %>" type="text" name="name">
         <label for="mileage-input">Total Mileage:</label>
-        <input type="text" name="totalMileage">
+        <input value="<%= trail.totalMileage %>" type="text" name="totalMileage">
         <label for="exposure-input">Sun Exposure:</label>
-        <input type="text" name="exposure">
+        <input value="<%= trail.exposure %>" type="text" name="exposure">
         <label for="dogsAllowed-input">Are Dogs Allowed?</label>
-        <input type="text" name="dogsAllowed">
+        <input value="<%= trail.dogsAllowed %>" type="text" name="dogsAllowed">
         <button type="submit">Update Trail</button>
     </form>
 </main>
