--- a/public/stylesheets/sonoma-hikes/style.css
+++ b/public/stylesheets/sonoma-hikes/style.css
@@ -1,20 +1,7 @@
-.flex-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 body{
     background-color:#A1AFA0;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: auto 1fr auto;
-    min-height: 100vh;
-    grid-template-areas: 
-  "nav nav nav"
-  "aside main main"
-  "footer footer footer";
-  border: solid #054914;
+    color: #054914;
 
 }
 
@@ -32,13 +19,50 @@ nav > a {
     color: #004A6F;
   }
 
-body > main{
-    grid-column: span 2;
-    margin-top: 200px;
+#welcome-page{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
 
-body > aside{
-    grid-column: span 1;
+.welcome-message{
+    display: flex;
+    justify-content: center;
+}
+
+.trail-index-title{
+    display: flex;
+    justify-content: center;
+}
+
+#trail-index-trails{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.profiles-show{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.picture-placeholder{
+    display: flex;
+    justify-content: left;
+}
+
+#profile-welcome-message{
+    display: flex;
+    justify-content: right;
+}
+
+#trail-details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 nav, footer{
