--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -6,7 +6,7 @@
  <h1>Explore this Trail!</h1>
  <section>
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/clouds1.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/assets/clouds1.jpeg" alt="Card image cap" width="200" height="200">
         <div class="card-body">
           <h1 class="card-title"> <%-JSON.stringify(trail.name)%> </h1>
         </div>
