--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -8,7 +8,7 @@
     <link 
     rel="icon"
 		id="favicon"
-    type="image/jpeg"
+    type="image/x-icon"
     href="/assets/pink-clouds.jpeg"
     />
     <link rel="stylesheet" href="/stylesheets/sonoma-hikes/style.css" />
