--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -2,18 +2,31 @@
 <%- include('../partials/nav') %>
 
 <main>
+    <div id="add-new-trail">
+    <div id="add-trail-title">
     <h1><%= title %></h1>
+    </div>
+    <div id="add-trail-form">
     <form action="/trails" method="POST">
         <label for="name-input">Trail Name:</label>
         <input type="text" name="name">
         <label for="mileage-input">Total Mileage:</label>
         <input type="text" name="totalMileage">
         <label for="exposure-input">Sun Exposure:</label>
-        <input type="text" name="exposure">
+        <select name="exposure" id="exposure-select" >
+            <option value="min">Minimum</option>
+            <option value="mod">Moderate</option>
+            <option value="high">High</option>
+        </select> 
         <label for="dogsAllowed-input">Are Dogs Allowed?</label>
-        <input type="text" name="dogsAllowed">
+        <select name="dogsAllowed" id="dogsAllowed-select" >
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select> 
         <button type="submit">Add Trail</button>
     </form>
+</div>
+</div>
 </main>
 
 <%- include('../partials/footer') %>
