--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -9,22 +9,15 @@
     <h2>Sonoma County, CA</h2>
   </div>
   <div id="trail-index-trails">
-  <table>
-    <thead>
-      <tr>
-        <th>Check out the Trails!</th>
-      </tr>
-    </thead>
-    <tbody>
+    <div id="trails-index-chart-title">
+        <h2>Check out the Trails!</h2>
+      </div>
+      <div id="trails-index-list">
       <% trails.forEach(trail => { %> 
-        <tr>
           <td><%= trail.name %></td>
-          <td><a href="/trails/<%= trail._id %>">Details</a></td>
-          <td>
-        </tr>
+          <td><a href="/trails/<%= trail._id %>">Details</a>
+          </div>
       <% }) %>
-    </tbody>
-  </table>
 </div>
 </main>
 
