--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -9,9 +9,9 @@
     <div id="add-trail-form">
     <form action="/trails" method="POST">
         <label for="name-input">Trail Name:</label>
-        <input type="text" name="name">
+        <input type="text" name="name" autocomplete="off">
         <label for="mileage-input">Total Mileage:</label>
-        <input type="text" name="totalMileage">
+        <input type="text" name="totalMileage" autocomplete="off">
         <label for="exposure-input">Sun Exposure:</label>
         <select name="exposure" id="exposure-select" >
             <option value="min">Minimum</option>
