--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -3,13 +3,10 @@
 
 <main>
 <div id="trail-details">
- <h1>Explore this Trail!</h1>
+ <h1 id="trail-show-name">Explore <%= trail.name %> </h1>
  <section>
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/assets/clouds1.jpeg" alt="Card image cap" width="200" height="200">
-        <div class="card-body">
-          <h1 class="card-title"> <%-JSON.stringify(trail.name)%> </h1>
-        </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Total Mileage: <%- JSON.stringify(trail.totalMileage)%></li>
             <li class="list-group-item">Sun Exposure: <%- JSON.stringify(trail.exposure)%></li>
