--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -26,6 +26,8 @@
         <button type="submit">Add Trail</button>
     </form>
 </div>
+<img id="new-trail-img" src="/assets/bodega-coast.jpeg" alt="Card image cap" width="200" height="200">
+
 </div>
 </main>
 
