--- a/views/trails/show.ejs
+++ b/views/trails/show.ejs
@@ -6,7 +6,7 @@
  <h1 id="trail-show-name">Explore <%= trail.name %> </h1>
  <section>
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/assets/clouds1.jpeg" alt="Card image cap" width="200" height="200">
+        <img id="bootstrap-card" src="/assets/clouds1.jpeg" alt="Card image cap" width="200" height="200">
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Total Mileage: <%- JSON.stringify(trail.totalMileage)%></li>
             <li class="list-group-item">Sun Exposure: <%- JSON.stringify(trail.exposure)%></li>
