--- a/views/trails/index.ejs
+++ b/views/trails/index.ejs
@@ -15,7 +15,7 @@
       <div id="trails-index-list">
       <% trails.forEach(trail => { %> 
           <td><%= trail.name %></td>
-          <td><a href="/trails/<%= trail._id %>">Details</a> 
+          <td><a href="/trails/<%= trail._id %>"><i class="fa-solid fa-tree" id="tree-trails-index"></i></a> 
       <% }) %>
     </div>
 </div>
