--- a/public/stylesheets/sonoma-hikes/style.css
+++ b/public/stylesheets/sonoma-hikes/style.css
@@ -1,9 +1,9 @@
 
 body{
-    background: url(/assets/blue-pink-grad.jpg);
+    background: url(/assets/blue-grey-grad.jpg);
     background-size: cover;
     background-color:#A1AFA0;
-    color: #054914;
+    color: #FFFBCE;
     background-size: 1500px;
 }
 
@@ -74,7 +74,7 @@ a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 #tree-trails-index{
@@ -95,6 +95,7 @@ a:hover{
     border-radius: 30px;
     padding: 10px;
     background-color: #FFFBCE;
+    color: #054914;
 }
 
 .profiles-show{
@@ -271,6 +272,17 @@ td{
     border: solid thin #FFFBCE;
     border-radius: 100px;
     margin-left: 20px;
+}
+
+#footer-icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 60px;
+}
+
+.fa-pagelines, .fa-leaf, .fa-temperature-high{
+    padding: 10px;
 }
 
 nav, footer{
