--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,7 @@
+<div>
+    <h3 id="footer-icons">
+    <i class="fa-brands fa-pagelines fa-2xl"></i><i class="fa-solid fa-leaf fa-2xl"></i><i class="fa-solid fa-temperature-high fa-2xl"></i>
+</h3>
+</div>
 </body>
 </html>
