add footer icon animation

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div>
     <h3 id="footer-icons">
-    <i class="fa-brands fa-pagelines fa-2xl"></i><i class="fa-solid fa-leaf fa-2xl"></i><i class="fa-solid fa-temperature-high fa-2xl"></i>
+    <i class="fa-brands fa-pagelines fa-2xl fa-flip" style="--fa-animation-iteration-count: 1;"></i><i class="fa-solid fa-leaf fa-2xl fa-flip" style="--fa-animation-iteration-count: 2;"></i><i class="fa-solid fa-temperature-high fa-2xl fa-flip" style="--fa-animation-iteration-count: 3;"></i>
 </h3>
 </div>
 </body>
