--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,15 @@
 <div>
     <div id="footer-icons">
     <h3>
-        <i class="fa-brands fa-pagelines fa-2xl fa-flip" style="--fa-animation-iteration-count: 1;"></i>
+        <i class="fa-solid fa-sun fa-2xl fa-bounce" style="--fa-animation-iteration-count: 1;"></i>
         <div class="hide">Bring lots of water!</div>
     </h3> 
     <h3>
-        <i class="fa-solid fa-leaf fa-2xl fa-flip" style="--fa-animation-iteration-count: 2;"></i>
+        <i class="fa-solid fa-leaf fa-2xl fa-bounce" style="--fa-animation-iteration-count: 1;"></i>
         <div class="hide">Bring sunscreen!</div>
     </h3>  
     <h3>
-        <i class="fa-solid fa-temperature-high fa-2xl fa-flip" style="--fa-animation-iteration-count: 3;"></i>
+        <i class="fa-solid fa-temperature-high fa-2xl fa-bounce" style="--fa-animation-iteration-count: 1;"></i>
         <div class="hide">Check the weather!</div>
     </h3> 
 </div>
