updated README image

--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -14,8 +14,8 @@
         <input type="text" name="totalMileage" autocomplete="off">
         <label for="exposure-input">Sun Exposure:</label>
         <select name="exposure" id="exposure-select" >
-            <option value="min">Minimum</option>
-            <option value="mod">Moderate</option>
+            <option value="minimum">Minimum</option>
+            <option value="moderate">Moderate</option>
             <option value="high">High</option>
         </select> 
         <label for="dogsAllowed-input">Are Dogs Allowed?</label>
